# Pico-LibModbus

./: .gitignore  CMakeLists.txt  LICENSE  README.md  wifi.h.example
examples/: CMakeLists.txt  README.bme280  bme280.c  bme280.h  lwipopts.h  pico_server_example.c  pico_server_example.conf.example  pico_weather_server.c  pico_weather_server.conf.example
libmodbus/: README.md  config.h.in  configure
libmodbus/autom4te.cache/: output.0  requests  traces.0  traces.1
libmodbus/src/: modbus-data.c  modbus-pico-tcp-private.h  modbus-pico-tcp.c  modbus-pico-tcp.h  modbus-private.h  modbus.c  modbus.h
libmodbus/tests/: Makefile.am  bandwidth-client.c  bandwidth-server-many-up.c  bandwidth-server-one.c  random-test-client.c  random-test-server.c  test-client-cli.c  unit-test-client.c  unit-test-server.c
tests/: CMakeLists.txt  lwipopts.h  pico-bandwidth-client.c  pico-bandwidth-server.c  pico-random-test-client.c  pico-random-test-server.c  pico-unit-test-client.c  pico-unit-test-server.c
